--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -38,6 +38,11 @@ a:hover {
 .text-center{
     text-align: center;
 }
+
+.picture-bg {
+    display: none;
+}
+
 .title {
     font: 37px $fnt_rl;
     text-transform: uppercase;
