--- a/app/css/libs/flexslider.css
+++ b/app/css/libs/flexslider.css
@@ -1,5 +1,5 @@
 /*
- * jQuery FlexSlider v2.6.2
+ * jQuery FlexSlider v2.6.3
  * http://www.woothemes.com/flexslider/
  *
  * Copyright 2012 WooThemes
@@ -53,7 +53,7 @@
   display: block;
 }
 .flexslider .slides:after {
-  content: "";
+  content: "\0020";
   display: block;
   clear: both;
   visibility: hidden;
@@ -74,8 +74,6 @@ html[xmlns] .flexslider .slides {
  * ====================================================================================================================*/
 .flexslider {
   margin: 0 0 60px;
-  background: #fff;
-  border: 4px solid #fff;
   position: relative;
   zoom: 1;
   -webkit-border-radius: 4px;
@@ -120,7 +118,6 @@ html[xmlns] .flexslider .slides {
   top: 50%;
   z-index: 10;
   overflow: hidden;
-  opacity: 0;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.8);
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
@@ -136,6 +133,18 @@ html[xmlns] .flexslider .slides {
 .flex-direction-nav .flex-next {
   right: -50px;
   text-align: right;
+}
+.flexslider:hover .flex-direction-nav .flex-prev {
+  left: 10px;
+}
+.flexslider:hover .flex-direction-nav .flex-prev:hover {
+  opacity: 1;
+}
+.flexslider:hover .flex-direction-nav .flex-next {
+  right: 10px;
+}
+.flexslider:hover .flex-direction-nav .flex-next:hover {
+  opacity: 1;
 }
 .flex-direction-nav .flex-disabled {
   opacity: 0!important;
@@ -156,8 +165,9 @@ html[xmlns] .flexslider .slides {
   cursor: pointer;
   color: #000;
 }
-
-
+.flex-pauseplay a:hover {
+  opacity: 1;
+}
 .flex-control-nav {
   width: 100%;
   position: absolute;
@@ -209,7 +219,6 @@ html[xmlns] .flexslider .slides {
   width: 100%;
   height: auto;
   display: block;
-  opacity: .7;
   cursor: pointer;
   -moz-user-select: none;
   -webkit-transition: all 1s ease;
@@ -217,6 +226,13 @@ html[xmlns] .flexslider .slides {
   -ms-transition: all 1s ease;
   -o-transition: all 1s ease;
   transition: all 1s ease;
+}
+.flex-control-thumbs img:hover {
+  opacity: 1;
+}
+.flex-control-thumbs .flex-active {
+  opacity: 1;
+  cursor: default;
 }
 /* ====================================================================================================================
  * RESPONSIVE
