--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -120,9 +120,9 @@ header {
     z-index: 1;
     left: 50%;
     top: 0;
-    -webkit-transform: translate(-55%, 0);
-        -ms-transform: translate(-55%, 0);
-            transform: translate(-55%, 0); }
+    -webkit-transform: translate(-50%, 0);
+        -ms-transform: translate(-50%, 0);
+            transform: translate(-50%, 0); }
   header video {
     width: 100%;
     display: block;
@@ -537,39 +537,39 @@ header {
     font: 16px "Roboto-Regular", sans-serif;
     text-align: center; }
 
-/*
-    *flexslider slider-laptop
-*/
 .slider-laptop .slider-1 {
-  position: absolute;
-  top: 2%;
-  left: 28%;
   margin: 0 auto;
-  max-width: 628px;
+  max-width: 922px;
   width: 100%;
   max-height: 398px;
   overflow: hidden;
   margin-top: 50px;
   border: none; }
+  .slider-laptop .slider-1 li {
+    overflow: hidden !important; }
+  .slider-laptop .slider-1 img {
+    max-width: 100%;
+    padding: 0.5% 15.5% 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
 
-.slider-laptop .slider-1 .flex-prev:before {
-  content: "";
-  background: url(../images/slider-2-next.png) 0 0 no-repeat;
-  width: 22px;
-  height: 181px;
-  position: absolute;
-  top: -72px;
-  right: 0px; }
+.slider-laptop .slider-1 .flex-prev {
+  background: url(../images/arrows.png) 0 0 no-repeat;
+  width: 21px;
+  height: 42px; }
+
+.slider-laptop .slider-2 .flex-next {
+  background: url(../images/arrows.png) -22px 0 no-repeat;
+  width: 21px;
+  height: 42px; }
 
 /*
     * slider 2
 */
 .get-mob-app .flexslider:hover .flex-direction-nav .flex-prev {
-  opacity: .7;
   left: 0px; }
 
 .get-mob-app .flexslider:hover .flex-direction-nav .flex-next {
-  opacity: .7;
   right: 0px; }
 
 .get-mob-app .slider-2 {
