--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -111,7 +111,7 @@ header {
         z-index: 1;
         left: 50%;
         top: 0;
-        transform: translate(-55%,0);
+        transform: translate(-50%,0);
     }
     video {
         width: 100%;
@@ -590,31 +590,33 @@ header {
     }
 }
 
-
-/*
-    *flexslider slider-laptop
-*/
 .slider-laptop {
     .slider-1 {
-        position: absolute;
-        top: 2%;
-        left: 28%;
         margin: 0 auto;
-        max-width: 628px;
+        max-width: 922px;
         width: 100%;
         max-height: 398px;
         overflow: hidden;
         margin-top: 50px;
         border: none;
+        li{
+            overflow: hidden!important;
+        }
+        img {
+            max-width: 100%;
+            padding: 0.5% 15.5% 0;
+            box-sizing: border-box;
+        }
     }
-    .slider-1 .flex-prev:before{
-        content: "";
-        background: url(../images/slider-2-next.png) 0 0 no-repeat;
-        width: 22px;
-        height: 181px;
-        position: absolute;
-        top: -72px;
-        right: 0px;
+    .slider-1 .flex-prev{
+        background: url(../images/arrows.png) 0 0 no-repeat;
+        width: 21px;
+        height: 42px;
+    }
+    .slider-2 .flex-next{
+        background: url(../images/arrows.png) -22px 0 no-repeat;
+        width: 21px;
+        height: 42px;
     }
 }
 /*
@@ -622,11 +624,9 @@ header {
 */
 .get-mob-app {
     .flexslider:hover .flex-direction-nav .flex-prev {
-        opacity: .7;
         left: 0px;
     }
     .flexslider:hover .flex-direction-nav .flex-next {
-        opacity: .7;
         right: 0px;
     }
     .slider-2 {
