--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -41,8 +41,9 @@
         }
     }
     .block-form .block-form__form {
-        input[type="text"], textarea {
-            width: 100%;    
+        input[type="text"], input[type="email"],
+        input[type="submit"], textarea {
+            width: 100%;
         }
      }
 }
