--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -98,6 +98,10 @@
             }
         }
     }
+    .free-consultation {
+        background-size: cover;
+        padding-left: 10px;
+    }
 }
 
 @media( max-width: 462px ){ 
@@ -108,5 +112,17 @@
         display: inline-block;
         max-width: 294px;
         line-height: 0;
+    }
+}
+
+@media( max-width: 410px ){ 
+    .free-consultation {
+        background-size: cover;
+        padding-left: 0px;
+        height: auto;
+        padding-bottom: 20px;
+        input[type="text"], input[type="email"], textarea {
+            width: 100%;
+        }
     }
 }
