--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -46,6 +46,17 @@
             width: 100%;
         }
      }
+    .slider-laptop {
+       .slider-1 {
+          margin: 0 auto;
+          max-width: 922px;
+          width: 100%;
+          max-height: 398px;
+          overflow: hidden;
+          margin-top: 11%;
+          border: none;
+        }
+     }
 }
 
 @media( max-width: 830px ){
