--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -663,6 +663,12 @@ header {
   .web-app-dev .web-app-dev__item {
     margin-right: 23px; } }
 
+@media (max-width: 1160px) {
+  .slider-laptop .slider-laptop__items {
+    -webkit-transform: translate(0, 0%);
+        -ms-transform: translate(0, 0%);
+            transform: translate(0, 0%); } }
+
 @media (max-width: 991px) {
   .web-app-dev .web-app-dev__item {
     width: 100%; }
