--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -7,7 +7,7 @@
 @media ( max-width: 1440px ){
     .main {
         .main-slogan-wrap {
-            transform: translate(11%, 50%);
+            transform: translate(11%, 40%);
         }
     }
 
@@ -66,6 +66,9 @@
 }
 
 @media( max-width: 830px ){
+    body {
+        overflow: hidden;
+    }
     .main {
         .main-slogan-wrap {
             transform: translate(1%, 50%);
@@ -121,6 +124,31 @@
     }
 }
 
+@media( max-width: 750px ){
+    .slider-laptop {
+        .slider-1 {
+            margin-top: 5%;
+        }
+    }
+    .slider-laptop {
+        .slider-laptop__items {
+            background-position: top center;
+        }
+    }
+}
+
+@media(max-width: 500px){
+    .slider-laptop {
+        .slider-1 .flex-caption {
+            top: 0;
+            font-size: 14px;
+        }
+        .slider-laptop__items {
+            height: 300px;
+        }
+    }
+}
+
 @media( max-width: 462px ){ 
     .main .main-slogan-wrap {
         transform: translate(1%, 36%);
@@ -128,7 +156,8 @@
     .main .btn {
         display: inline-block;
         max-width: 294px;
-        line-height: 0;
+        line-height: 2;
+        height: 62px;
     }
 }
 
