--- a/app/sass/_lending.scss
+++ b/app/sass/_lending.scss
@@ -1,5 +1,3 @@
-@import "_variables";
-@import "_mixin";
 .center-block {
     text-align: center;
 }
@@ -11,6 +9,15 @@ a:hover {
     cursor: pointer;
     color: #fff;
 }
+
+a[href^="tel:"], a[href^="mailto:"] {
+    color: $clr_main2;
+    cursor: pointer;
+    &:active, &:focus {
+        text-decoration: none;
+    }
+}
+
 .clr-black{
     color:#000!important;
 }
@@ -117,6 +124,9 @@ header {
         left: 50%;
         top: 0;
         transform: translate(-50%, 0);
+        a[href^="tel:"], a[href^="mailto:"] {
+            color: $clr_main2;
+        }
     }
     video {
         width: 100%;
@@ -599,6 +609,9 @@ header {
         color: #8e8e8e;
         font: 16px $fnt_rr;
         text-align: center;
+        a[href^="tel:"], a[href^="mailto:"] {
+            color: #fff;
+        }
     }
 }
 
