--- a/app/sass/_mobile.scss
+++ b/app/sass/_mobile.scss
@@ -36,6 +36,7 @@
     .web-app-dev { 
         .web-app-dev__item {
             width: 100%;
+             margin-right: auto;
         }
     }
     .partners {
@@ -65,7 +66,8 @@
 @media( max-width: 830px ){
     .main {
         .main-slogan-wrap {
-            transform: translate(1%, 50%);
+            transform: translate(0%, 50%);
+            padding-left: 5%;
         }    
     }
     .main-nav .main-nav__items {
